--- a/app/src/main/res/layout/capture_picture.xml
+++ b/app/src/main/res/layout/capture_picture.xml
@@ -17,7 +17,14 @@
         android:id="@+id/captureButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Take Picture"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:text="Take Picture" />
+
+    <Button
+        android:id="@+id/editButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Edit Image" />
 
 </LinearLayout>
