--- a/app/src/main/res/layout/activity_pdf_gallery.xml
+++ b/app/src/main/res/layout/activity_pdf_gallery.xml
@@ -1,15 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Replace "YOUR_PACKAGE_NAME" with your actual package name -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F5F5F5"
     tools:context=".PdfGalleryActivity">
+
+    <LinearLayout
+        android:id="@+id/buttonLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp">
+
+        <Button
+            android:id="@+id/addNewButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_button_background"
+            android:text="Add New"
+            android:textColor="#FFFFFF" />
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/buttonLayout"
         android:padding="8dp" />
+
+    <ImageButton
+        android:id="@+id/logoutButton"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
+        android:background="@drawable/rounded_button_background"
+        android:contentDescription="Logout"
+        android:src="@drawable/ic_logout" />
 
 </RelativeLayout>
